検索用とマスタの画像保管用GCSを分けてTTLを追加
